# ChangeLog for dev-python/pypgsql
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pypgsql/ChangeLog,v 1.9 2004/12/30 23:55:19 ciaranm Exp $

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  11 Sep 2004; Daniel Ahlberg <aliz@gentoo.org> pypgsql-2.4.ebuild:
  Added amd64 keyword, closing #63514.

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> pypgsql-2.3.ebuild:
  change virtual/glibc to virtual/libc

  07 May 2004; Bryan Østergaard <kloeri@gentoo.org> pypgsql-2.3.ebuild:
  Add missing IUSE.

  25 Jan 2004; Alastair Tse <liquidx@gentoo.org> pypgsql-2.4.ebuild:
  bumped 2.4 to stable because this is compatible with py2.3

*pypgsql-2.4 (12 Oct 2003)

  12 Oct 2003; Alastair Tse <liquidx@gentoo.org> pypgsql-2.4.ebuild:
  version bump (#30398)

*pypgsql-2.3 (18 Dec 2002)

  18 Dec 2002; B.Lauwers <blauwers@gentoo.org> :
  Forgotten ChangeLog